--- a/css/style-pc.css
+++ b/css/style-pc.css
@@ -36,7 +36,8 @@ ul.content > li > a {display: block; text-align: center;}
 #noInput > h5 {position: relative; font-size: 18px; padding: 10px 20px 50px 20px; margin-top: 10px; border: 1px solid black; box-sizing: border-box;}
 #noInput > h5 #list {padding: 10px 20px; font-size: 16px; font-weight:
 400; margin-bottom: 20px;}
-#list > li {display: inline-block; margin-right: 12px;}
+#list > li {display: inline-block; margin-right: 12px; margin-top: 5px; padding: 4px 12px; background-color: #adccfc; border-radius: 5px; font-weight: 400;}
+#list > li.remove {background-color: #dadada; color: #a0a0a0;}
 #noInput > h5 > button {position: absolute; left: 50%; bottom: 20px; transform: translate(-50%, 0); border: none; border-radius: 3px; padding: 10px 20px; background-color: #ebebeb; font-size: 14px;}
 
 
