scss 연습(기본, mixin, extend, 응용까지)

--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -19,3 +19,6 @@ i[class^="fa"] span {position: absolute; left: -9999px;}
 .ir-hidden {position: absolute !important; left: -9999px !important;}
 
 /* 참고 : https://necolas.github.io/normalize.css/8.0.1/normalize.css */
+
+
+$resetColor : #da6f6f;
