--- a/css/style-pc.css
+++ b/css/style-pc.css
@@ -8,14 +8,14 @@ br.only-m::after {content: ' ';}
 
 /* 전역 변수 설정 */
 :root {
-
+  --mainColor: skyblue;
 }
 
 
 /* common */
 body {font-family: 'NotoSansKR', sans-serif; font-size: 15px; font-weight: 300; color: #333333; line-height: 1.4; letter-spacing: -0.02em; background-color: #ffffff;}
 #wrapper {min-width: 320; overflow: hidden;}
-#skip-nav {position: fixed; left: 0; top: -40px; width: 100%; line-height: 40px; text-align: center; background-color: rgba(0, 0, 0, 0.6); color: #ffffff; font-size: 16px; transition: top 0.3s; z-index: 100000;}
+#skip-nav {position: fixed; left: 0; top: -40px; width: 100%; line-height: 40px; text-align: center; background-color: var(--mainColor); color: #ffffff; font-size: 16px; transition: top 0.3s; z-index: 100000;}
 #skip-nav:focus {top: 0;}
 
 ul.tab {width: 400px; height: 30px; margin-bottom: 20px; background-color: burlywood;}
